# montor-commander

./: .gitignore  AGENTS.md  biome.json  components.json  index.html  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.agents/skills/ark-ui/: SKILL.md
.agents/skills/panda-css/: SKILL.md
.agents/skills/react/: SKILL.md
.agents/skills/tauri-typegen/: SKILL.md
.agents/skills/typescript/: SKILL.md
.agents/skills/xtermjs-parser-hooks/: SKILL.md
.zed/: settings.json
docs/: roadmap.md
implementation-plans/: bash-command-detection.md  chat-gen-structured-output.md  chat-implementation-plan.md  genai-request-logging.md  settings.md
src/: main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: bash-integration.sh  bash-sysinfo.sh  zsh-integration.sh  zsh-sysinfo.sh
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  jsonl-store.rs  jsonl_store.rs  lib.rs  main.rs  osc133.rs  recorder.rs  shell.rs  terminal.rs
src-tauri/src/chat/: generation.rs
src-tauri/src/settings/: llm_providers.rs  mod.rs  shared.rs  ui.rs
src-tauri/templates/: system_prompt.md  user_turn.md
src/app/: app.tsx  chat-pane.tsx  index.css  providers.tsx  query-client.ts  terminal-pane.tsx  terminal-sections.ts  window-manager-builder.tsx  window-manager.tsx
src/app/chat/: chat-pane.tsx  chat-store.ts  (+7 more)
src/implementation-plans/: backend-section-recorder.md
src/theme/: conditions.ts  global-css.ts  index.ts  keyframes.ts  semantic-tokens.ts  text-styles.ts
(+97 files in other folders)
