[package]
name = "montor-commander"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = "0.5.1"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["time"] }
tempfile = "3"
genai = "0.6.5"
dotenvy = "0.15.7"
chrono = "0.4.45"
askama = "0.16.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri-plugin-opener = "2"
vt100 = "0.16"

[features]
custom-protocol = ["tauri/custom-protocol"]
